--- a/css/custom.css
+++ b/css/custom.css
@@ -15,14 +15,16 @@ font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .card-img-top {
-    height: 250px;
+    height: 200px;
     object-fit: cover;
 }
 
 .card-body {
+    
     text-align: center;
-    background-color: mediumaquamarine;
+    background-color: black;
     color: white;
+    height: 225px;
 }
 
 .card-title {
@@ -67,3 +69,30 @@ color: white;
 font-family: 'Comic Sans MS';
 
 }
+
+/* Footer styling similar to navbar */
+footer {
+background-color: turquoise; /* sky blue background */
+color: #fff; /* white text for contrast */
+font-family: 'Comic Sans MS'; /* playful font */
+text-align: center; /* centre content */
+padding: 1.5rem 1rem; /* comfortable spacing */
+}
+/* Paragraph and small text inside footer */
+footer p {
+margin: 0;
+font-size: 1rem;
+font-weight: bold;
+}
+footer small {
+display: block;
+margin-top: 0.5rem;
+font-size: 0.9rem;
+}
+/* Social icons specific spacing (optional) */
+.site-footer .social-links i {
+margin-left: 5px;
+}
+
+
+
