--- a/css/custom.css
+++ b/css/custom.css
@@ -94,5 +94,34 @@ font-size: 0.9rem;
 margin-left: 5px;
 }
 
+.hero-image-2 {
+    background-image: 
+    url(../images/Football\ boots\ image.jpg);
 
+    height: 25vh;
+    background-position: center;
+    background-image: no-repeat;
+    background-size: cover;
+
+    display: flexbox;
+    align-items: center;
+    justify-content: center;
+    
+}
+
+
+.hero-text-2 h1 {
+font-weight: bold;
+color: white;
+text-transform: uppercase;
+font-family: 'Comic Sans MS';
+
+}
+
+.hero-text-2 p {
+font-weight: bold;
+color: white;
+font-family: 'Comic Sans MS';
+
+}
 
