--- a/css/custom.css
+++ b/css/custom.css
@@ -110,17 +110,10 @@ margin-left: 5px;
 }
 
 
-.hero-text-2 h1 {
+.hero-text-2 {
 font-weight: bold;
 color: white;
 text-transform: uppercase;
-font-family: 'Comic Sans MS';
-
-}
-
-.hero-text-2 p {
-font-weight: bold;
-color: white;
 font-family: 'Comic Sans MS';
 text-align: center;
 }
